--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ODOC_HELPERT</title>
 </head>
 <body>
+    <h1>project/templates/base.html</h1>
     {% block content %}
     {% endblock %}
 </body>
