[Fix] 회원가입 불필요한 로직 수정, css 수정

--- a/user/templates/signin.html
+++ b/user/templates/signin.html
@@ -21,7 +21,7 @@
         </svg>
         <br>
         <br>
-        <h1 class="h3 mb-3 font-weight-normal">COVID-19-REPORT</h1>
+        <h1 class="h3 mb-3 font-weight-normal">ODOC_HELPER</h1>
         <br>
         <div class="form-group">
             <label for="text" class="sr-only">Id</label>
